--- a/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -1,4 +1,4 @@
-#Fri Oct 19 10:55:19 EDT 2018
+#Mon Nov 19 04:29:36 EST 2018
 analytics.integration.enable=false
 analytics.server.endpoint="JkYzbGlbK9hM2kll81qSoXfzapQDQgaKmEIPN3wKSiw\="
 analytics.authentication.email="Ie1y9j66ltd8ItYN00fRIj1eAXpcXFdn"
