Refactored test cases for My Work module P1 Suite

--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,15 +1,15 @@
-#Mon Oct 22 05:36:38 EDT 2018
+#Thu Dec 20 10:04:56 EST 2018
 mailConfig.encryptionEnabled=false
 mailConfig.host="smtp.mail.yahoo.co.in"
 mailConfig.port="465"
 mailConfig.username="chintan1904@yahoo.co.in"
 mailConfig.password="C.shah@1904"
 mailConfig.securityProtocol="TLS"
-mailConfig.attachment=true
+mailConfig.attachment=false
 mailConfig.subject="Katalon Summary Report"
 mailConfig.cc=""
 mailConfig.reportRecipients="cshah@savanainc.com; apatil@savanainc.com"
-mailConfig.reportFormat="[\\n  \\"HTML\\",\\n  \\"LOG\\",\\n  \\"CSV\\",\\n  \\"PDF\\"\\n]"
+mailConfig.reportFormat="[\\n  \\"PDF\\",\\n  \\"CSV\\",\\n  \\"LOG\\",\\n  \\"HTML\\"\\n]"
 report.takeScreenshotOption=true
 report.videoRecorderOption="{\\n  \\"enable\\"\: false,\\n  \\"videoFormat\\"\: \\"MOV\\",\\n  \\"videoQuality\\"\: \\"MEDIUM\\",\\n  \\"allowedRecordIfFailed\\"\: true,\\n  \\"allowedRecordIfPassed\\"\: false\\n}"
 execution.default.timeout=30
