--- a/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -1,4 +1,4 @@
-#Thu Dec 20 03:31:58 EST 2018
+#Tue Jan 01 11:51:43 IST 2019
 analytics.integration.enable=false
 analytics.server.endpoint="JkYzbGlbK9hM2kll81qSoXfzapQDQgaKmEIPN3wKSiw\="
 analytics.authentication.email="Ie1y9j66ltd8ItYN00fRIj1eAXpcXFdn"
