--- a/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -1,4 +1,4 @@
-#Tue Jan 01 11:51:43 IST 2019
+#Wed Jan 02 04:05:20 EST 2019
 analytics.integration.enable=false
 analytics.server.endpoint="JkYzbGlbK9hM2kll81qSoXfzapQDQgaKmEIPN3wKSiw\="
 analytics.authentication.email="Ie1y9j66ltd8ItYN00fRIj1eAXpcXFdn"
