--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,4 +1,4 @@
-#Mon Oct 01 03:32:25 EDT 2018
+#Tue Feb 05 05:11:40 EST 2019
 execution.default.webUi.enablePageLoadTimeout=true
 execution.default.webUi.pageLoadTimeout=120
 execution.default.webUi.ignorePageLoadTimeOutException=false
