Enabled Katalon analytics integration

--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,4 +1,4 @@
-#Tue Feb 05 05:11:40 EST 2019
+#Tue Feb 05 19:21:41 IST 2019
 mailConfig.encryptionEnabled=false
 mailConfig.host="smtp.mail.yahoo.co.in"
 mailConfig.port="465"
