--- a/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -1,5 +1,5 @@
-#Tue Jan 29 18:40:16 IST 2019
-analytics.integration.enable=false
+#Tue Feb 05 19:21:41 IST 2019
+analytics.integration.enable=true
 analytics.server.endpoint="JkYzbGlbK9hM2kll81qSoXfzapQDQgaKmEIPN3wKSiw\="
 analytics.authentication.email="Ie1y9j66ltd8ItYN00fRIj1eAXpcXFdn"
 analytics.authentication.password="p4y+y39Ir5MkaMvQO1ylBg\=\="
@@ -9,5 +9,5 @@ analytics.testresult.autosubmit=true
 analytics.testresult.attach.screenshot=true
 analytics.testresult.attach.log=true
 analytics.testresult.attach.capturedvideos=false
-analytics.authentication.token="cz9lWfpNY4ORnKbaOKGDmSinrHECdpQVsBepdPKm492PzpOL9MUIrA\=\="
+analytics.authentication.token="u6MfxYsrElbtzyGKjABgM6Eg+IY/C72riateVvQc46WgLLIFYg44jA\=\="
 analytics.team="{\\n  \\"id\\"\: 4649,\\n  \\"role\\"\: \\"OWNER\\",\\n  \\"name\\"\: \\"Team cshah@savanainc.com\\"\\n}"
