Updated Email password

--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,15 +1,15 @@
-#Tue Mar 19 15:44:07 IST 2019
+#Fri Apr 05 13:12:31 IST 2019
 mailConfig.encryptionEnabled=false
 mailConfig.host="smtp.mail.yahoo.co.in"
 mailConfig.port="465"
 mailConfig.username="chintan1904@yahoo.co.in"
-mailConfig.password="C.shah@1904"
+mailConfig.password="Discover@9571"
 mailConfig.securityProtocol="TLS"
 mailConfig.attachment=false
 mailConfig.subject="Katalon Summary Report"
 mailConfig.cc=""
 mailConfig.reportRecipients="cshah@savanainc.com; apatil@savanainc.com"
-mailConfig.reportFormat="[\\n  \\"PDF\\",\\n  \\"CSV\\",\\n  \\"LOG\\",\\n  \\"HTML\\"\\n]"
+mailConfig.reportFormat="[\\n  \\"HTML\\",\\n  \\"CSV\\",\\n  \\"PDF\\",\\n  \\"LOG\\"\\n]"
 report.takeScreenshotOption=true
 report.videoRecorderOption="{\\n  \\"enable\\"\: false,\\n  \\"videoFormat\\"\: \\"MOV\\",\\n  \\"videoQuality\\"\: \\"MEDIUM\\",\\n  \\"allowedRecordIfFailed\\"\: true,\\n  \\"allowedRecordIfPassed\\"\: false\\n}"
 execution.default.timeout=30
