--- a/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -1,5 +1,5 @@
-#Wed Mar 20 13:02:40 IST 2019
-analytics.integration.enable=true
+#Fri Apr 05 13:08:56 IST 2019
+analytics.integration.enable=false
 analytics.server.endpoint="JkYzbGlbK9hM2kll81qSoXfzapQDQgaKmEIPN3wKSiw\="
 analytics.authentication.email="Ie1y9j66ltd8ItYN00fRIj1eAXpcXFdn"
 analytics.authentication.password="p4y+y39Ir5MkaMvQO1ylBg\=\="
