Enable analytics integration

--- a/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -1,5 +1,5 @@
-#Fri Apr 05 13:08:56 IST 2019
-analytics.integration.enable=false
+#Fri Apr 05 05:07:51 EDT 2019
+analytics.integration.enable=true
 analytics.server.endpoint="JkYzbGlbK9hM2kll81qSoXfzapQDQgaKmEIPN3wKSiw\="
 analytics.authentication.email="Ie1y9j66ltd8ItYN00fRIj1eAXpcXFdn"
 analytics.authentication.password="p4y+y39Ir5MkaMvQO1ylBg\=\="
@@ -9,5 +9,5 @@ analytics.testresult.autosubmit=true
 analytics.testresult.attach.screenshot=true
 analytics.testresult.attach.log=true
 analytics.testresult.attach.capturedvideos=false
-analytics.authentication.token="rNJreUlvv95Yp7v8JN4q4sT5Eh+eshDLw1dHyr+ERt8N+zXWx2P6eA\=\="
+analytics.authentication.token="Rr4Be5MdUOsLK0Sq6DcUD4xO+He+bEuTxOxhXwxEw15PyVPaBqmHgA\=\="
 analytics.team="{\\n  \\"id\\"\: 4649,\\n  \\"role\\"\: \\"OWNER\\",\\n  \\"name\\"\: \\"Team cshah@savanainc.com\\"\\n}"
