Updated Email and Plugin settings

--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,15 +1,15 @@
-#Tue Apr 23 13:37:51 IST 2019
+#Sun Jul 21 02:01:34 EDT 2019
 mailConfig.encryptionEnabled=false
 mailConfig.host="smtp.mail.yahoo.co.in"
 mailConfig.port="465"
 mailConfig.username="chintan1904@yahoo.co.in"
 mailConfig.password="Discover@9571"
 mailConfig.securityProtocol="TLS"
-mailConfig.attachment=false
+mailConfig.attachment=true
 mailConfig.subject="Katalon Summary Report"
 mailConfig.cc=""
 mailConfig.reportRecipients="cshah@savanainc.com; apatil@savanainc.com"
-mailConfig.reportFormat="[\\n  \\"HTML\\",\\n  \\"LOG\\",\\n  \\"CSV\\",\\n  \\"PDF\\"\\n]"
+mailConfig.reportFormat="[\\n  \\"PDF\\"\\n]"
 report.takeScreenshotOption=true
 report.videoRecorderOption="{\\n  \\"enable\\"\: false,\\n  \\"videoFormat\\"\: \\"MOV\\",\\n  \\"videoQuality\\"\: \\"MEDIUM\\",\\n  \\"allowedRecordIfFailed\\"\: true,\\n  \\"allowedRecordIfPassed\\"\: false\\n}"
 execution.default.timeout=30
