--- a/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -1,4 +1,4 @@
-#Tue Apr 23 13:37:51 IST 2019
+#Sun Jul 21 02:02:13 EDT 2019
 analytics.integration.enable=true
 analytics.server.endpoint="JkYzbGlbK9hM2kll81qSoXfzapQDQgaKmEIPN3wKSiw\="
 analytics.authentication.email="Ie1y9j66ltd8ItYN00fRIj1eAXpcXFdn"
@@ -9,5 +9,5 @@ analytics.testresult.autosubmit=true
 analytics.testresult.attach.screenshot=true
 analytics.testresult.attach.log=true
 analytics.testresult.attach.capturedvideos=false
-analytics.authentication.token="S7lkWTdS4juWPwjuNBVjMEkZWHHYm6dPdG0gJFbh3lOEz8SLkNcgcQ\=\="
+analytics.authentication.token="T1oMRzMyaJp+48cJQCuMuWEazIQq2yvvZAVBwhPdog2rBKQCJhQL/g\=\="
 analytics.team="{\\n  \\"id\\"\: 4649,\\n  \\"role\\"\: \\"OWNER\\",\\n  \\"name\\"\: \\"Team cshah@savanainc.com\\"\\n}"
