Updated Project settings to point it to new organization.

--- a/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -1,13 +1,6 @@
-#Sun Jul 21 02:02:13 EDT 2019
+#Thu Dec 19 03:10:10 EST 2019
 analytics.integration.enable=true
-analytics.server.endpoint="JkYzbGlbK9hM2kll81qSoXfzapQDQgaKmEIPN3wKSiw\="
-analytics.authentication.email="Ie1y9j66ltd8ItYN00fRIj1eAXpcXFdn"
-analytics.authentication.password="p4y+y39Ir5MkaMvQO1ylBg\=\="
-analytics.authentication.encryptionEnabled=true
-analytics.project="{\\n  \\"id\\"\: 4579,\\n  \\"name\\"\: \\"RunTime UI - Automation\\",\\n  \\"teamId\\"\: 4649\\n}"
-analytics.testresult.autosubmit=true
-analytics.testresult.attach.screenshot=true
-analytics.testresult.attach.log=true
-analytics.testresult.attach.capturedvideos=false
-analytics.authentication.token="T1oMRzMyaJp+48cJQCuMuWEazIQq2yvvZAVBwhPdog2rBKQCJhQL/g\=\="
-analytics.team="{\\n  \\"id\\"\: 4649,\\n  \\"role\\"\: \\"OWNER\\",\\n  \\"name\\"\: \\"Team cshah@savanainc.com\\"\\n}"
+analytics.project="{\\n  \\"id\\"\: 43714,\\n  \\"name\\"\: \\"nGage Core\\",\\n  \\"teamId\\"\: 30930\\n}"
+analytics.authentication.token="CjyHTMLi50cukC3MP4bYzw3B9BRrqMXmTPlJ+BfQTtiu0BdA99oS1Q\=\="
+analytics.team="{\\n  \\"id\\"\: 30930,\\n  \\"role\\"\: \\"ADMIN\\",\\n  \\"name\\"\: \\"Savana\\",\\n  \\"organization\\"\: {\\n    \\"id\\"\: 36923,\\n    \\"name\\"\: \\"Savana Inc\\"\\n  }\\n}"
+analytics.onpremise.enable=false
