--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,4 +1,4 @@
-#Tue Apr 23 13:37:51 IST 2019
+#Thu Dec 19 03:10:10 EST 2019
 execution.default.webUi.enablePageLoadTimeout=true
 execution.default.webUi.pageLoadTimeout=120
 execution.default.webUi.ignorePageLoadTimeOutException=false
@@ -7,3 +7,4 @@ execution.default.waitForIEHanging=600
 execution.default.selectingCapturedObjectProperties="id,true;name,true;alt,true;checked,true;form,true;href,false;placeholder,true;selected,true;src,false;title,true;type,true;text,true;linked_text,true"
 execution.default.selectingCapturedObjectXpaths="xpath\:attributes,true;xpath\:idRelative,true;dom\:name,true;xpath\:link,true;xpath\:neighbor,true;xpath\:href,true;xpath\:img,true;xpath\:position,true"
 execution.default.selectingCapturedObjectSelectorMethod="BASIC"
+execution.default.imageRecognitionEnabled=false
